# LevyCAS

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
levycas/: __init__.py
levycas-api/: README.md  apitest.py  requirements.txt
levycas-app/: README.md  apptest.py  requirements.txt
levycas/expressions/: __init__.py  exp.py  expression.py  symbols.py  trig.py
levycas/operations/: __init__.py  algebraic_ops.py  calculus_ops.py  expression_ops.py  math_ops.py  numerical_ops.py  polynomial_ops.py  simplification_ops.py  trig_ops.py
levycas/parser/: Lexer.py  __init__.py  parser.py
src/LevyCAS.egg-info/: SOURCES.txt  top_level.txt
src/levycas/: Expression.py  Lexer.py  Parser.py  __init__.py  __main__.py
src/levycas/LevyCAS.egg-info/: PKG-INFO  SOURCES.txt
src/levycas/cli/: __init__.py  __main__.py  main.py
src/levycas/cli/screens/: __init__.py  demo.py  graph.py  script.py  welcome.py
src/levycas/cli/screens/styles/: demo.tcss  graphing.tcss  scripting.tcss  welcome.tcss
src/levycas/cli/scripting/: errors.py  execution.py  scripting.py
src/levycas/expressions/: __init__.py  constant.py  exp.py  expression.py  trig.py
src/levycas/operations/: __init__.py  algebraic_ops.py  calculus_ops.py  equation_ops.py  exponential_ops.py  expression_ops.py  factorization_ops.py  numerical_ops.py  polynomial_ops.py  simplification_ops.py  trig_ops.py
src/levycas/parser/: __init__.py  lexer.py  parser.py
src/levycas/scripting/: GRAMMAR.md  __init__.py  execution.py  scripting.py
tests/: test.py  test_algebraic.py  test_calculus.py  test_cli_graphing.py  test_cli_scripting.py  test_exp.py  test_expansion.py  test_expression_ops.py  test_factorization.py  test_numerical.py  test_ordering.py  test_parse.py  test_polynomials.py  test_scripting.py  test_simplification.py  test_trig.py  test_tui_scripting.py
