[project]
name = "levycas"
version = "0.0.7"
authors = [
    {name = "Alex Levy", email = "ajlevy246@gmail.com"},
]
description = "A computer algebra system written in python, including a Pratt Parser for parsing math in natural language."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.optional-dependencies]
tui = [
    "textual",
]

[project.urls]
homepage = "https://github.com/ajlevy246/LevyCAS"

[project.scripts]
levycas = "levycas.cli.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]