[project]
name = "levycas"
version = "0.1.0"
authors = [
    {name = "Alex Levy", email = "ajlevy246@gmail.com"},
]
description = "A computer algebra system written in python, with an interactive text-based user interface complete with a built-in scripting language and graphing directly in the terminal."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.optional-dependencies]
tui = [
    "textual",
    "textual-plot",
]
dev = [
    "textual",
    "textual-plot",
    "textual-dev",
    "pytest-cov",
    "pytest-asyncio",
]

[project.urls]
homepage = "https://github.com/ajlevy246/LevyCAS"

[project.scripts]
levycas = "levycas.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["levycas"]

[tool.coverage.report]
omit = [
    "src/levycas/cli/*",
]
show_missing = true
skip_covered = true